--- a/config_templates/production.yml
+++ b/config_templates/production.yml
@@ -1,7 +1,13 @@
 production:
   #state_file: "/path/to/sample_state.csv"
   gain_pattern_name: p10xgain
+  gain_job_id: 3
+  gain_job_channels: 32
   exp_pattern_name: p10xexp
+  exp_job_ids:
+   - 3
+   - 4
+   - 6
   channels:
   - channel: green
     job_name: green10x
