--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,10 @@
 [tox]
-envlist=py36, py37
+envlist = py36, py37, py38
+skip_missing_interpreters = True
 
 [testenv]
-commands=pytest
-deps=pytest
+commands =
+  pytest --timeout=30 --cov=camacqplugins --cov-report= {posargs}
+deps =
+  -rrequirements.txt
+  -rrequirements_test.txt
