Add tox lint env

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38
+envlist = py36, py37, py38, lint
 skip_missing_interpreters = True
 
 [testenv]
@@ -7,4 +7,17 @@ commands =
   pytest --timeout=30 --cov=camacqplugins --cov-report= {posargs}
 deps =
   -rrequirements.txt
+  -rrequirements_test.txt
+
+[testenv:lint]
+basepython = python3
+ignore_errors = True
+commands =
+  black --check ./
+  flake8 camacqplugins scripts tests
+  pylint camacqplugins scripts tests
+  pydocstyle camacqplugins scripts tests
+deps =
+  -rrequirements.txt
+  -rrequirements_lint.txt
   -rrequirements_test.txt
