--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,10 @@
 envlist = py36, py37, py38, lint
 skip_missing_interpreters = True
 
+[travis]
+python =
+  3.6: py36, lint
+
 [testenv]
 commands =
   pytest --timeout=30 --cov=camacqplugins --cov-report= {posargs}
