Use flake8-docstrings

--- a/tox.ini
+++ b/tox.ini
@@ -20,9 +20,8 @@ basepython = python3
 ignore_errors = True
 commands =
   black --check ./
-  flake8 camacqplugins scripts tests
-  pylint camacqplugins scripts tests
-  pydocstyle camacqplugins scripts tests
+  flake8 ./
+  pylint camacqplugins scripts setup.py tests
 deps =
   -rrequirements.txt
   -rrequirements_lint.txt
