--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,13 @@
 [tox]
-envlist = py310, lint
+envlist = py310, py311, py312, py313, lint
 skip_missing_interpreters = True
 
 [gh-actions]
 python =
     3.10: py310, lint
+    3.11: py311
+    3.12: py312
+    3.13: py313
 
 [testenv]
 commands =
